--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -94,12 +94,13 @@
                 </div>
 
                 <div class="pure-u-1-2">
-                    <div>
-                        <img src="{{ asset('img/plus-circle.svg') }}" id="myBtn">
+
+                    <div class="creation-champs pure-control-group">
+                        {{ form_row(formUpdate.site) }}
                     </div>
                     <div class="creation-champs pure-control-group" id="select-ville">
-                        <label for="select-ville-balise">Ville : </label>
-                        <select id="select-ville-balise">
+                        <label for="select-ville-balise">Ville</label><?
+                        ?><select id="select-ville-balise">
                             {% for ville in villes %}
                                 <option value="{{ ville.id }}">{{ ville.nom }}</option>
                             {% endfor %}
@@ -107,10 +108,13 @@
                     </div>
                     <div class="creation-champs pure-control-group" id="select-creation">
                         {{ form_row(formUpdate.lieu) }}
+                        <a href="">
+                            <img src="{{ asset('img/plus-circle.svg') }}" alt="add lieu">
+                            new
+                        </a>
                     </div>
 
                     <legend></legend>
-
                     <div class="creation-champs pure-control-group">
                         <label class="labeldisplay" for="rue-holder">Rue</label>
                         <label class="displayed labeldisplay" id="rue-holder"></label>
@@ -124,7 +128,9 @@
                         <label class="displayed labeldisplay" id="longitude-holder"></label>
                     </div>
                     <legend></legend>
+
                     {{ form_rest(formUpdate) }}
+
                 </div>
                 <div class="pure-controls">
                     <!-- empty : for 'pure' disposition -->
