RESOLVE eclatement hors cadre

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,9 +27,9 @@ body{
 #logodotcom{
     height: 75px;
 }
-#navmenu{
+#menu-nav{
     margin-top: auto;
-    margin-left: 10vw;
+
 }
 .button-nav,
 .button-nav-admin{
