modif vue accueil

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -40,7 +40,7 @@
                             <div id="recherche-date" class="pure-g">
                                 <label for="date-debut" class="pure-u-1-4 label-date-filtre">Entre : </label>
                                 <input type="date" id="date-debut" class="pure-u-1-4" name="tri-date-debut">
-                                <label for="date-fin" class="pure-u-1-4 label-date-filtre">et : </label>
+                                <label for="date-fin" class="pure-u-1-4 label-date-filtre">&nbsp&nbsp et : </label>
                                 <input type="date" id="date-fin" class="pure-u-1-4" name="tri-date-fin">
                             </div>
                         </div>
