--- a/public/css/main.css
+++ b/public/css/main.css
@@ -161,7 +161,7 @@ a{
 }
 .spacement>label:first-child{
     font-weight: bold;
-    text-decoration: wavy underline green;
+   /* text-decoration: wavy underline green;*/
 }
 
 .pickerrow{
