--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Détails d'une sortie{% endblock %}
 
 {% block body %}
-    <div class="pure-form pure-form-aligned centred-conteneur">
+    <div class="pure-form pure-form-aligned centred-conteneur formsortie">
         <fieldset>
             <legend >Détail de la sortie
            {% if sortie.etat.id == 7 %}
@@ -17,11 +17,11 @@
                         <label class="displayed">{{ sortie.nom }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Date et heure de la sortie</label>
+                        <label>Date et heure</label>
                         <label class="displayed">{{ sortie.dateHeureDebut | date('d/m/Y H:i') }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
-                        <label>Date limite d'inscription</label>
+                        <label>Limite d'inscription</label>
                         <label class="displayed">{{ sortie.dateLimiteInscription | date('d/m/Y H:i') }}</label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
@@ -33,12 +33,14 @@
                         <label class="displayed">
                             {% if sortie.duree>=1440 %}
                                 {{ sortie.duree//1440 }} j {{ (sortie.duree%1440)//60 }} h
-                            {% elseif sortie.duree%60==0%}
+                            {% elseif sortie.duree%60==0 %}
                                 {{ sortie.duree//60 }} h
+                            {% elseif sortie.duree//60==0 %}
+                                {{ sortie.duree%60 }} min
                             {% else %}
-                                {{ sortie.duree//60 }} h {{ sortie.duree%60 }} min
+                                {{ sortie.duree//60 }} h
                             {% endif %}
-                            </label>
+                        </label>
                     </div>
                     <div class="creation-champs pure-control-group spacement">
                         <label>Description et infos</label>
