UPDATE #2003 : Fix Modification

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -115,6 +115,7 @@
                     </div>
 
                     <legend></legend>
+                    <input type="hidden" id="id-choix-lieu" name="id-choix-lieu">
                     <div class="creation-champs pure-control-group">
                         <label class="labeldisplay" for="rue-holder">Rue</label>
                         <label class="displayed labeldisplay" id="rue-holder"></label>
@@ -174,7 +175,6 @@
             </div>
             <button id="creer-lieu" class="btn">Créer</button>
         </div>
-
     </div>
 
 
