--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,8 @@
 #tableau-sortie{
     display: flex;
     justify-content: center;
-    padding-top: 10vh;
+    padding-top: 5vh;
+    padding-bottom: 2.5vh;
 }
 
 #home-liste-sortie{
