--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -12,6 +12,45 @@
 {% endblock %}
 
 {% block body %}
+    <style>
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0); /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
     <form method="post" class="pure-form pure-form-aligned centred-conteneur formsortie">
         <fieldset>
             <div class="pure-g">
@@ -65,13 +104,14 @@
                     </div>
                     <div class="pure-control-group" id="select-creation">
                         {{ form_row(formSortie.lieu) }}
-                        <a href="">
+                        <div id="myBtn">
                             <img src="{{ asset('img/plus-circle.svg') }}" alt="add lieu">
                             new
-                        </a>
+                        </div>
                     </div>
 
                     <legend></legend>
+                    <input type="hidden" id="id-choix-lieu" name="id-choix-lieu">
 
                     <div class="pure-control-group">
                         <label class="labeldisplay" for="rue-holder">Rue</label>
@@ -96,10 +136,36 @@
                     <button class="pure-button button-primary" type="submit">Ajouter</button>
                 </div>
             </div>
-
         </fieldset>
+        <input type="hidden" value="" id="hidden-ajout" name="hidden-data-ajout">
     </form>
-    <input type="hidden" value="{{ lieuxdonnees }}" id="hidden">
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="pure-control-group" id="ajout-lieu-nom">
+                {{ form_row(formLieu.nom) }}
+            </div>
+            <div class="pure-control-group" id="ajout-lieu-rue">
+                {{ form_row(formLieu.rue) }}
+            </div>
+            <div class="pure-control-group" id="ajout-lieu-latitude">
+                {{ form_row(formLieu.latitude) }}
+            </div>
+            <div class="pure-control-group" id="ajout-lieu-longitude">
+                {{ form_row(formLieu.longitude) }}
+            </div>
+            <div class="pure-control-group" id="ajout-lieu-ville">
+                {{ form_row(formLieu.ville) }}
+            </div>
+            <button id="creer-lieu" class="btn">Créer</button>
+        </div>
+    </div>
+
+
+    <input type="hidden" value="{{ lieuxdonnees }}" id="hidden" name="hidden-data">
 
     <script>
         $(function () {
@@ -111,5 +177,12 @@
             });
         });
     </script>
+    <script>
+        window.onload = function (){
+            changementLieu();
+            changementInfoLieu();
+        };
+    </script>
     <script src="{{ asset('js/selectCreationModification.js') }}"></script>
+    <script src="{{ asset('js/creationLieu.js') }}"></script>
 {% endblock %}
