--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -116,18 +116,20 @@
 
                     <legend></legend>
                     <input type="hidden" id="id-choix-lieu" name="id-choix-lieu">
-                    <div class="creation-champs pure-control-group">
+
+                    <div class="pure-control-group">
                         <label class="labeldisplay" for="rue-holder">Rue</label>
                         <label class="displayed labeldisplay" id="rue-holder"></label>
                     </div>
-                    <div class="creation-champs pure-control-group">
+                    <div class="pure-control-group">
                         <label class="labeldisplay" for="latitude-holde">Latitude</label>
                         <label class="displayed labeldisplay" id="latitude-holder"></label>
                     </div>
-                    <div class="creation-champs pure-control-group">
+                    <div class="pure-control-group">
                         <label class="labeldisplay" for="longitude-holder">Longitude</label>
                         <label class="displayed labeldisplay" id="longitude-holder"></label>
                     </div>
+
                     <legend></legend>
 
                     {{ form_rest(formUpdate) }}
@@ -208,6 +210,9 @@
             }
             changementInfoLieu();
         }
+        window.onload = function() {
+            villeDeBase();
+        };
     </script>
     <script src="{{ asset('js/selectCreationModification.js') }}"></script>
     <script src="{{ asset('js/modification.js') }}"></script>
