UPDATE nb inscription 'min = 1'

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -50,7 +50,7 @@
                         {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
                     </div>
                     <div class="creation-champs pure-control-group">
-                        {{ form_row(formUpdate.nbInscriptionMax) }}
+                        {{ form_row(formUpdate.nbInscriptionMax, { 'attr' : { 'min' : '1' , 'value' : '1'}}) }}
                     </div>
                     <div class="creation-champs pure-control-group">
                         {{ form_row(formUpdate.infosSortie) }}
