--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -125,7 +125,7 @@
                                 {% set find = 0 %}
                             {% endif %}
                             {% if find == 1 %}
-                                <td>X</td>
+                                <td style="text-align: center">X</td>
                             {% else %}
                                 <td></td>
                             {% endif %}
