--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -79,7 +79,7 @@
                 </div>
                 <table class="pure-table pure-u-1-1 fixed_header" id="home-liste-sortie" style="">
                     <thead>
-                    <tr>
+                    <tr style="text-align: center">
                         <th>Nom de la sortie</th>
                         <th>Date de la sortie</th>
                         <th>Fin d'inscription</th>
