modif css nav bar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,6 +215,11 @@ a{
     cursor:pointer;
 }
 
+#menu-nav>*{
+    text-align: end;
+    padding-right: 10px;
+}
+
  /* formulaire 'id' used for js :
  - formulaire-modifier
  -
