modif css nav bar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -220,6 +220,9 @@ a{
     padding-right: 10px;
 }
 
+tr{
+    text-align: center;
+}
  /* formulaire 'id' used for js :
  - formulaire-modifier
  -
