--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -17,25 +17,25 @@
                     &nbsp<strong style="color: red;">(Annulée : ' {{ sortie.annulationSortie.libelle }} ')</strong>
                 {% endif %}
             </legend>
-            <div class="example-wrapper pure-g">
+            <div class="pure-g">
                 <div class="pure-u-1-2">
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Nom de la sortie :</label>
                         <label class="displayed">{{ sortie.nom }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Date et heure de la sortie :</label>
                         <label class="displayed">{{ sortie.dateHeureDebut | date('d/m/Y H:i') }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Date limite d'inscription :</label>
                         <label class="displayed">{{ sortie.dateLimiteInscription | date('d/m/Y H:i') }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Nombre de place :</label>
                         <label class="displayed">{{ sortie.nbInscriptionMax }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Durée :</label>
                         <label class="displayed">
                             {% if sortie.duree>=1440 %}
@@ -49,25 +49,25 @@
                             {% endif %}
                         </label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Description et infos :</label>
                         <label class="displayed">{{ sortie.infosSortie }}</label>
                     </div>
                 </div>
                 <div class="pure-u-1-2">
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Ville organisatrice :</label>
                         <label class="displayed">{{ sortie.lieu.ville.nom }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Lieu :</label>
                         <label class="displayed">{{ sortie.lieu.nom }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Rue :</label>
                         <label class="displayed">{{ sortie.lieu.rue }}</label>
                     </div>
-                    <div class="creation-champs pure-control-group spacement">
+                    <div class="pure-control-group spacement">
                         <label>Code postal :</label>
                         <label class="displayed">{{ sortie.lieu.ville.codePostal }}</label>
                     </div>
@@ -79,7 +79,9 @@
                     {# <label>Longitude</label> #}
                     {# <label class="displayed">{{ sortie.lieu.longitude }}</label> #}
                     {# </div> #}
-                    <div class="creation-champs pure-control-group spacement" id="map"></div>
+                    <div class="pure-control-group spacement" id="map">
+                        <label>Position :</label>
+                    </div>
                 </div>
             </div>
         </fieldset>
@@ -97,14 +99,16 @@
             <tr>
                 <td>{{ sortie.organisateur.getPseudo() }}</td>
                 <td>{{ sortie.organisateur.getPrenom() }} {{ sortie.organisateur.getNom() }}</td>
-                <td><a class="pure-button button-secondary"
-                       href={{ path("participant_show",{"id":sortie.organisateur.getId()}) }}>Profil</a></td>
+                <td>
+                    <a class="pure-button button-secondary" href={{ path("participant_show",{"id":sortie.organisateur.getId()}) }}>Profil</a>
+                </td>
             </tr>
             {% for participant in participants %}
                 <tr>
                     <td>{{ participant.pseudo }}</td>
                     <td>{{ participant.prenom }} {{ participant.nom }}</td>
-                    <td><a class="pure-button button-primary" href={{ path("participant_show",{"id":participant.id}) }}>Profil</a>
+                    <td>
+                        <a class="pure-button button-primary" href={{ path("participant_show",{"id":participant.id}) }}>Profil</a>
                     </td>
                 </tr>
             {% endfor %}
