--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -69,7 +69,7 @@
                         {{ form_row(formUpdate.lieu) }}
                         <div id="myBtn">
                             <img src="{{ asset('img/plus-circle.svg') }}" alt="add lieu">
-                            new
+                            <h>nouveau</h>
                         </div>
                     </div>
 
