--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,8 +28,13 @@ body{
 }
 #menu-nav{
     margin-top: auto;
-
 }
+/*#menu-nav>*{
+    text-align: end;
+    padding-right: 10px;
+}*/
+
+
 .button-nav,
 .button-nav-admin{
     color: rgb(45, 44, 44);
@@ -108,7 +113,7 @@ a{
 
 .displayed{
     /*font-weight: bold;*/
-    color: rgba(35, 33, 33, 0.85) !important;
+    color: rgb(35, 33, 33) !important;
     width: max-content;
 }
 .labeldisplay{
@@ -180,8 +185,10 @@ a{
     margin-bottom: 0.5em !important;
 }
 .spacement>label:first-child{
-    font-weight: bold;
+    font-size: 115%;
+    /*
     text-decoration:  underline ;
+    */
 }
 
 .pickerrow{
@@ -218,11 +225,6 @@ a{
 }
 #myBtn:hover {
     cursor:pointer;
-}
-
-#menu-nav>*{
-    text-align: end;
-    padding-right: 10px;
 }
 
  /* formulaire 'id' used for js :
