UPDATE #2003 : Modif site non modifiable

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -55,7 +55,10 @@
 
                 <div class="pure-u-1-2">
                     <div class="pure-control-group">
-                        {{ form_row(formUpdate.site) }}
+                        <label>
+                            Site
+                        </label>
+                        {{ sortie.site.nom }}
                     </div>
                     <div class="pure-control-group" id="select-ville">
                         <label for="select-ville-balise">Ville</label><?
