UPDATE fix js modif création

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -171,7 +171,7 @@
             }
             changementInfoLieu();
             changementLieu();
-            selecteurLieu = document.getElementById('sortie_lieu');
+            selecteurLieu = document.getElementById('modifier_sortie_lieu');
             for (i = 0; i < selecteurLieu.length; i++) {
                 if (selecteurLieu[i].value == {{ sortie.lieu.id }}) {
                     selecteurLieu[i].setAttribute("selected", "selected");
