--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="pure-u-1-2">
-                    <div class="pure-control-group">
+                    <div class="pure-control-group spacement">
                         <label>
                             Site
                         </label>
