--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,11 @@
 {% block body %}
 
 {% endblock %}
+
 </body>
+<footer class="footer-div">
+    <p><a href="#" style="color:black;">@MarvelousTiptopTechnology</a> pour Eni-Ecole</p>
+</footer>
 <script src="{{ asset('js/error.js') }}"></script>
 {% if error is defined %}
     <script>
