--- a/templates/sortie/sortieCreation.html.twig
+++ b/templates/sortie/sortieCreation.html.twig
@@ -105,7 +105,7 @@
     <div class="centred-conteneur mt1">
         <div class="pure-controls">
             <button class="pure-button button-primary" type="submit" id="submit-sortie">Ajouter</button>
-            <a class="pure-button button-primary" href="{{ path('home') }}">Annuler</a>
+            <a class="pure-button button-cancel" href="{{ path('home') }}">Annuler</a>
         </div>
     </div>
 
