--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,17 @@ body{
     background: radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -webkit-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
     background: -moz-radial-gradient(ellipse farthest-corner at center center, #ffffff 0%, rgba(250,243,145,0.5) 100%);
+    height: 100%;
+}
+.footer-div{
+    text-align: center;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 35px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.07);
+    font-size: 70%;
 }
 
 .menu-bordereau{
@@ -29,10 +40,10 @@ body{
 #menu-nav{
     margin-top: auto;
 }
-/*#menu-nav>*{
-    text-align: end;
+#menu-nav>*{
+    text-align: center;
     padding-right: 10px;
-}*/
+}
 
 
 .button-nav,
@@ -72,6 +83,7 @@ body{
 .button-cancel,
 .button-publish,
 .button-warning,
+.button-delete,
 .button-error,
 .button-success {
     color: black;
@@ -90,10 +102,13 @@ body{
     background : #fff07a;
 }
 .button-cancel{
-    background : #f69a72;
+    background : #fdad8c;
 }
 .button-publish{
     background: #95ce6a;
+}
+.button-delete{
+    background: #fa6565;
 }
 .button-warning{
     font-size: 0.9em;
@@ -197,6 +212,11 @@ a{
     *!
 }*/
 
+#annulation-motif{
+    min-width: 15vw;
+    max-width: 15vw;
+}
+
 .pickerrow{
     display: flex;
     flex-direction: row;
@@ -243,7 +263,9 @@ a{
 
 legend{
     color:black !important;
+    font-size: 120%;
 }
+
 
  /* formulaire 'id' used for js :
  - formulaire-modifier
